--- a/rental-app/src/App.css
+++ b/rental-app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #cfe9f5;
+  background-color: #93bed1;
   min-height: 100vh;
 }
 
@@ -28,7 +28,7 @@ body {
 }
 
 .buttonContainer {
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   border-radius: 16px;
   display: inline-block;
 }
@@ -65,9 +65,9 @@ body {
 }
 
 .swapContainer {
-  background-color: rgb(136, 193, 212);
-  width: 700px;
-  height: 350px;
+  background-color: rgb(221, 241, 248);
+  width: 500px;
+  height: 280px;
   margin: 0 auto;
   top: 15%;
   border-radius: 50px;
@@ -81,10 +81,10 @@ body {
 }
 
 .swapText {
-  margin-left: 225px;
+  margin-left: 40px;
   color: rgb(255, 255, 255);
   font: Brush Script MT;
-  font-size: 40px;
+  font-size: 15px;
 }
 
 .gearContainer {
@@ -164,6 +164,30 @@ body {
   border-radius: 20px;
   background-color: #dd2f81;
   cursor: pointer
+}
+
+.buttonContainer3:hover {
+  border-color: #68e2eb !important;
+  border: 1px solid;
+  color: rgb(90, 89, 89);
+  font: Brush Script MT;
+}
+
+.buttonContainer3 {
+  width: 100%;
+  height: 55px;
+  /* margin-left: 230px; */
+  line-height: 55px;
+  font-size: 24px;
+  color: rgb(247, 247, 247);
+  border-color: rgb(136, 193, 212) !important;
+  border: 1px solid;
+  border-radius: 17px;
+  background-color: #a8c3ce;
+  opacity: 75%;
+  cursor: pointer;
+  font: Brush Script MT;
+  
 }
 
 /******************************************************************************/
